# plasmate

./: .dockerignore  .gitignore  .vercelignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  JS-RENDER-BRIEF.md  MCP-SPEC.md  README.md  ROADMAP-v0.2.md  install.sh  server.json
.github/: FUNDING.yml
.github/workflows/: ci.yml  coverage-js.yml  coverage.yml  release.yml
bench/: local_server.py  report-100.md  results.json  run.sh  throughput.rs  top100.txt  urls-100.txt  urls.txt
bench/pages/: 1.html  10.html  100.html  11.html  12.html  13.html  14.html  15.html  16.html  17.html  18.html  19.html  2.html  20.html  21.html  22.html  23.html  24.html  25.html  26.html  27.html  28.html  29.html  3.html  30.html  31.html  32.html  33.html  34.html  35.html  36.html  37.html  38.html  39.html  4.html  40.html  41.html  42.html  43.html  44.html  (+63 more)
benchmarks/: run-cost-analysis.sh  som-cost-analysis-2026-03-22.json
benchmarks/paper6/: model.py
benchmarks/webtaskbench/: README.md  tasks.json  urls.json
demo/: demo-comparison.sh
docs/: PRD.md  ROBOTS-TXT-PROPOSAL.md  SCHEMA-ORG-PROPOSAL.md  W3C-COMMUNITY-GROUP-PROPOSAL.md  claude-desktop-config.md  publish-to-mcp-registry.md
examples/: plasmate_client.py
examples/plugins/strip-tracking/: Cargo.toml
examples/plugins/strip-tracking/src/: lib.rs
integrations/browser-use/: README.md  example.py  pyproject.toml
integrations/browser-use/examples/: basic_agent.py
integrations/browser-use/plasmate_browser_use/: __init__.py  browser.py  extractor.py  som_formatter.py  utils.py
integrations/browser-use/tests/: test_extractor.py
integrations/fixtures/: README.md  action-availability.expected.json  action-availability.som.json
integrations/langchain/: README.md  example.py  pyproject.toml
integrations/langchain/langchain_plasmate/: __init__.py  loader.py  som_output.py  tools.py
integrations/langchain/tests/: test_som_output.py
integrations/openclaw/: README.md  SKILL.md
integrations/vercel-ai/: LICENSE  README.md  package.json  tsconfig.json
marketing/: ecosystem-diagram.md  ecosystem-visibility-plan.md  twitter-ecosystem-thread.md
scripts/: action-manifest-conformance.sh  crosslink-integrations.sh
sdk/go/: README.md  client.go  go.mod  query.go  som.go  som_test.go
sdk/node/: README.md  package-lock.json  package.json  tsconfig.esm.json  tsconfig.json
sdk/python/: README.md  pyproject.toml
sdk/python/src/plasmate/: __init__.py  client.py  query.py  types.py
sdk/python/src/plasmate.egg-info/: PKG-INFO  SOURCES.txt
sdk/python/tests/: test_json_extract.py  test_query.py
smoke/: fixture.html  mcp-smoke.py  package-lock.json  package.json  puppeteer-smoke.mjs
specs/: SOM-SPEC-v1.0.md  som-schema.json
specs/conformance/: 001-static-page.expected.json  001-static-page.html  002-navigation.expected.json  002-navigation.html  003-login-form.expected.json  003-login-form.html  004-data-table.expected.json  004-data-table.html  005-product-page.expected.json  005-product-page.html  006-article.expected.json  006-article.html  007-hidden-elements.expected.json  007-hidden-elements.html  008-search-form.expected.json  008-search-form.html  009-aria-roles.expected.json  009-aria-roles.html  010-dialog.expected.json  010-dialog.html  011-radio-checkbox.expected.json  011-radio-checkbox.html  012-class-heuristics.expected.json  012-class-heuristics.html  013-no-landmarks.expected.json  013-no-landmarks.html  014-fieldset-groups.expected.json  014-fieldset-groups.html  015-action-state.expected.json  015-action-state.html  016-action-semantics.expected.json  016-action-semantics.html  README.md
src/: daemon.rs  lib.rs  main.rs  screenshot.rs
src/auth/: bridge.rs  config.rs  mod.rs  store.rs
src/awp/: handler.rs  messages.rs  mod.rs  server.rs  session.rs
src/bench/: runner.rs
src/cache/: mod.rs  store.rs
src/cdp/: cookies.rs  domains.rs  handler.rs  mod.rs  server.rs  session.rs  types.rs
src/coverage/: runner.rs
src/js/: dom_bridge.rs  extract.rs  mod.rs  pipeline.rs  runtime.rs  script_fetch.rs
src/mcp/: mod.rs  server.rs  sessions.rs  tools.rs
src/network/: fetch.rs  intercept.rs  mod.rs  proxy.rs  tls.rs
src/plugin/: manager.rs  mod.rs  runtime.rs  types.rs
src/session/: mod.rs
src/som/: compiler.rs  css_visibility.rs  diff.rs  diff_tests.rs  element_id.rs  filter.rs  heuristics.rs  metadata.rs  mod.rs  types.rs
tests/: awp_integration_test.rs  awp_server_test.rs  intercept_test.rs  plugin_test.rs  som_compiler_test.rs  som_improvements_test.rs  tls_integration_test.rs
tests/fixtures/: class_based_regions.html  ecommerce.html  edge_cases.html  heading_structure.html  hidden_elements.html  hn_table_layout.html  iframe_page.html  layout_table.html  login_form.html  news_page.html  shadow_dom_page.html  simple_page.html  wiki_like.html  wikipedia_like.html
tools/awp-cdp-proxy/: README.md  pyproject.toml
tools/awp-cdp-proxy/awp_cdp_proxy/: __init__.py  cdp_client.py  server.py  som_generator.py  translator.py
tools/awp-cdp-proxy/tests/: test_translator.py
website/: build.mjs  compare.html  humans.txt  index.html  install.sh  llms-full.txt  llms.txt  package-lock.json  package.json  privacy.html  robots.txt  sitemap.xml  vercel.json
website/.well-known/: som.json
website/blog/: ecosystem-60-integrations.md
website/compare/: plasmate-vs-browser-use.md  plasmate-vs-crawl4ai.md  plasmate-vs-firecrawl.md
website/demo-gifs/: README.md  fetch-basic.tape  fetch-comparison.tape  mcp-demo.tape  selector-demo.tape
website/docs/: awp-mvp.html  awp.html  benchmark-cost.html  benchmark-latest.html  blog-html-vs-markdown-vs-som.html  brand-assets.html  brand.html  changelog.html  coverage-js.html  coverage-js.json  coverage.html  coverage.json  executive-guide.html  guide-agent-browses-twitter.html  guide-authenticated-browsing.html  index.html  install.html  integration-autogen.html  integration-browser-use.html  integration-crewai.html  integration-langchain.html  integration-llamaindex.html  integration-mcp.html  integration-openclaw.html  (+24 more)
(+63 files in other folders)
