[package]
name = "plasmate"
version = "0.1.0"
edition = "2021"
description = "Agent-native headless browser engine with Semantic Object Model"
license = "Apache-2.0"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["cookies", "rustls-tls"] }
html5ever = "0.38"
markup5ever = "0.38"
markup5ever_rcdom = "0.38"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio-tungstenite = "0.24"
futures-util = "0.3"
sha2 = "0.10"
hex = "0.4"
url = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
uuid = { version = "1", features = ["v4"] }
regex = "1"
thiserror = "2"

[dev-dependencies]
tempfile = "3"
