[package]
name = "plasmate"
version = "0.5.0"
edition = "2021"
description = "Agent-native headless browser engine with Semantic Object Model"
license = "Apache-2.0"
repository = "https://github.com/plasmate-labs/plasmate"
homepage = "https://plasmate.app"
readme = "README.md"

[features]
default = []
plugins = ["wasmtime"]

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["cookies", "rustls-tls-native-roots", "gzip", "brotli", "deflate", "stream", "http2", "charset", "blocking"] }
html5ever = "0.38"
markup5ever = "0.38"
markup5ever_rcdom = "0.38"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio-tungstenite = "0.24"
axum = "0.8"
tower-http = { version = "0.6", features = ["cors"] }
futures-util = "0.3"
sha2 = "0.10"
hex = "0.4"
aes-gcm = "0.10"
rand = "0.8"
url = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }

# V8 JavaScript engine (Chrome's JS runtime, Rust bindings)
v8 = "130"

# Wasm plugin runtime (optional — enable with `--features plugins`)
wasmtime = { version = "27", optional = true }

# Fast hashing for SOM cache keys
xxhash-rust = { version = "0.8", features = ["xxh3"] }
uuid = { version = "1", features = ["v4"] }
regex = "1"
thiserror = "2"

# TLS configuration (direct rustls access for fingerprint tuning)
rustls = { version = "0.23", default-features = false, features = ["ring", "logging", "std", "tls12"] }
rustls-native-certs = "0.8"
rustls-pemfile = "2"
tempfile = "3"

[dev-dependencies]
serial_test = "3"
tempfile = "3"
wat = "1"
