[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "plasmate-browser-use"
version = "0.3.0"
description = "Plasmate SOM integration for Browser Use - 10x fewer tokens for AI web agents"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
dependencies = [
    "som-parser>=0.3.0",
]

[project.optional-dependencies]
browser-use = ["browser-use>=0.12.0"]

[project.urls]
Homepage = "https://plasmate.app"
Documentation = "https://plasmate.app/docs/integration-browser-use"
Repository = "https://github.com/plasmate-labs/plasmate"

[tool.hatch.build.targets.wheel]
packages = ["plasmate_browser_use"]
