[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "langchain-plasmate"
version = "0.1.0"
description = "LangChain integration for Plasmate — agent-native headless browser with SOM output"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Plasmate Contributors" }]
keywords = ["langchain", "plasmate", "browser", "agent", "som", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "langchain-core>=0.2",
    "plasmate",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "langchain>=0.2",
]

[project.urls]
Homepage = "https://github.com/nicepkg/plasmate"
Documentation = "https://github.com/nicepkg/plasmate/tree/master/integrations/langchain"

[tool.hatch.build.targets.wheel]
packages = ["langchain_plasmate"]
