[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "awp-cdp-proxy"
version = "0.1.0"
description = "AWP-to-CDP proxy - use the Agent Web Protocol with any Chrome browser"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
dependencies = [
    "websockets>=12.0",
    "som-parser>=0.3.0",
    "httpx>=0.27.0",
]

[project.scripts]
awp-cdp-proxy = "awp_cdp_proxy.server:main"

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
