[package]
name = "strip-tracking"
version = "0.1.0"
edition = "2021"
description = "Plasmate plugin: strips tracking/analytics elements from the SOM"

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = "s"
lto = true
